rearranged css, added comments, fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,56 @@
 
-#koala,
-#pooh,
-#sloth {
-    width:250px;
-    height:250px;
-    margin: 25px;
-}
+/* these styles apply to all the pages, navbar, typography, container and cards */
 
-.col-md-4 {
-    width: 80%;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    text-align:center;
-    padding:15px;
-    margin-bottom:25px;
-}
-
-.jumbotron {
-    text-align: center;
-}
-
-.card {
-    text-align:center;
-    margin:35px auto;
-}
-
-
-.container {
-    margin-top:75px;
-    margin-bottom:75px;
-}
-
-.text-center {
-    padding-bottom:30px;
-}
-
-.indexphotos {
-    width: 550px;
-    height: 550px;
-    margin: 50px auto;
+body {
+    font-family: 'Roboto Mono', monospace;
+    background-color: lightgrey;
 }
 
 .navbar-text {
     font-weight: bolder;
 }
 
-body {
-    font-family: 'Roboto Mono', monospace;
-    background-color: lightgrey;
+.container {
+    margin-top:75px;
+    margin-bottom:75px;
+}
+
+.card {
+    margin:35px auto;
+}
+
+.text-center {
+    padding-bottom:30px;
+}
+
+/* Styling for the portfolio page columns and typography */
+h3 {
+    padding: 25px;
+}
+
+#koala,
+#pooh,
+#sloth {
+    width:250px;
+    height:250px;
+    margin: 25px auto;
+}
+
+.col-md-4 {
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* This is all the styling for the footer, text and image */
+h6 {
+    margin:5px;
+}
+
+.smallfrog {
+    height:30px;
+    width:30px;
+    padding:5px;
+    margin-right: 15px;
 }
 
 footer {
@@ -61,16 +64,14 @@ footer {
     letter-spacing: 20px;
   }
 
-  h6 {
-      margin:5px;
-  }
+/* sizing and margin for the photos in the carousel on index page */
+.indexphotos {
+    width: 550px;
+    height: 550px;
+    margin: 50px auto;
+}
 
-  .smallfrog {
-      height:30px;
-      width:30px;
-      padding:5px;
-      margin-right: 15px;
-  }
+/* media query for the index page carousel */
 
   @media screen and (max-width: 991px) {
 
